fix: api naming
fix: loading states

fix: no posts notification

--- a/src/components/pages/home/home.module.scss
+++ b/src/components/pages/home/home.module.scss
@@ -16,3 +16,11 @@
     gap: 6rem;
   }
 }
+
+.noPosts {
+  margin-top: 4rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  text-align: center;
+}
