--- a/src/components/home-post/home-post.module.scss
+++ b/src/components/home-post/home-post.module.scss
@@ -4,6 +4,7 @@
   width: var(--post-width);
   background-color: var(--color-secondary);
   padding: 1rem 0.75rem;
-  box-shadow: 0 1px 2px var(--shadow-2);
   border-radius: var(--radius-medium);
+
+  box-shadow: var(--shadow-pimary);
 }
