--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -3,7 +3,7 @@
 .header {
   @include common.mediaquery('desktop') {
     background-color: var(--color-secondary);
-    box-shadow: 0 2px 1px var(--shadow-1);
+    box-shadow: var(--shadow-pimary);
     border-radius: var(--radius-big);
     flex-shrink: 0;
     display: flex;
@@ -35,6 +35,7 @@
   display: none;
 
   @include common.mediaquery('desktop') {
+    box-shadow: var(--shadow-pimary);
     margin: 0;
     margin-top: auto;
     position: relative;
