--- a/src/components/textarea/text-area.module.scss
+++ b/src/components/textarea/text-area.module.scss
@@ -36,6 +36,10 @@
     outline: none;
     border-color: var(--color-primary);
   }
+
+  &::placeholder {
+    font-weight: 500;
+  }
 }
 
 .error {
