--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,7 +2,7 @@
 
 %variables {
   --color-primary: rgb(255, 255, 255);
-  --color-secondary: rgb(238, 240, 238);
+  --color-secondary: rgb(246 247 249);
   --color-accent: rgb(109, 194, 171);
   --color-error: rgb(207, 60, 30);
   --color-error-light: rgb(255, 194, 194);
@@ -25,10 +25,13 @@
   --placeholder-animation: skeleton-loading 1.5s infinite linear;
   --placeholder-bg-size: 500%;
 
+  --shadow-0-1: rgb(0, 0, 0, 0.08);
   --shadow-1: rgba(0, 0, 0, 0.1);
   --shadow-2: rgba(0, 0, 0, 0.2);
   --shadow-5: rgba(0, 0, 0, 0.5);
   --shadow-8: rgba(0, 0, 0, 0.8);
+
+  --shadow-pimary: inset 0 0 0 1px var(--shadow-0-1);
 
   --radius-big: 1rem;
   --radius-medium: 0.5rem;
@@ -50,8 +53,8 @@
 }
 
 %variablesDarkTheme {
-  --color-primary: rgb(60, 60, 60);
-  --color-secondary: rgb(80, 80, 80);
+  --color-primary: rgb(35 39 4);
+  --color-secondary: rgb(52 58 70);
   --color-gray: rgb(100, 100, 100);
   --color-gray-hover: rgb(130, 130, 130);
   --color-overlay: rgba(80, 80, 80, 0.85);
@@ -66,4 +69,5 @@
 
   --color-error-light: rgb(155, 91, 91);
 
+  --shadow-0-1: rgb(255, 255, 255, 0.08);
 }
