feat: add preference sync with db

--- a/src/components/buttons/button/button.module.scss
+++ b/src/components/buttons/button/button.module.scss
@@ -25,7 +25,7 @@
 
 .secondary {
   @include common.button;
-  border-color: var(--color-text);
+  border-color: var(--color-text-gray);
   color: var(--color-text);
   background-color: transparent;
 }
