chore: design improvements

--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -1,6 +1,8 @@
 @use '/src/styles/common';
 
 .layout {
+  padding: 0 1rem;
+
   @include common.mediaquery('desktop') {
     min-height: 100dvh;
     display: flex;
