--- a/src/components/modals/list-modal-item/list-modal-item.module.scss
+++ b/src/components/modals/list-modal-item/list-modal-item.module.scss
@@ -9,6 +9,7 @@
     display: flex;
     align-items: center;
     gap: 0.75rem;
+    padding: 0.75rem 0;
     border-radius: var(--radius-small);
 
     @include common.mediaquery('desktop') {
