refactor: single sign-in to register

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -16,6 +16,7 @@
     position: sticky;
     top: 3rem;
     height: calc(100vh - 6rem);
+    max-height: 100rem;
     overflow: auto;
     left: 0;
     gap: 4rem;
