--- a/src/components/modals/list-modal-item/list-modal-item.module.scss
+++ b/src/components/modals/list-modal-item/list-modal-item.module.scss
@@ -1,6 +1,7 @@
 @use '/src/styles/common.scss';
 
 .item {
+    overflow: hidden;
     width: 100%;
 }
 
@@ -11,6 +12,7 @@
     gap: 0.75rem;
     padding: 0.75rem 0;
     border-radius: var(--radius-small);
+    font-weight: 500;
 
     @include common.mediaquery('desktop') {
         padding: 1rem 0.5rem;
