--- a/src/components/modals/list-modal/list-modal.module.scss
+++ b/src/components/modals/list-modal/list-modal.module.scss
@@ -7,9 +7,14 @@
   justify-content: center;
   align-items: flex-start;
   background-color: var(--color-primary);
-  width: clamp(21rem, 80vw, 40rem);
-  padding: 1rem 1rem;
+  width: clamp(20rem, 80vw, 40rem);
+  padding: 1rem 1.5rem;
   border-radius: var(--radius-medium);
+
+  @include common.mediaquery('desktop') {
+    width: clamp(25rem, 40vw, 35rem);
+    padding: 1.5rem;
+  }
 }
 
 .focusLock {
@@ -21,6 +26,10 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 2rem;
+
+  @include common.mediaquery('desktop') {
+    padding-left: 0.5rem;
+  }
 }
 
 .heading {
@@ -33,11 +42,8 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding-bottom: 0.5rem;
 
   @include common.mediaquery('desktop') {
-    gap: 1.75rem;
-    gap: 0.5rem;
-    padding-bottom: 0;
+    gap: 1.5rem;
   }
 }
