--- a/src/components/input/input.module.scss
+++ b/src/components/input/input.module.scss
@@ -69,6 +69,7 @@
 .error {
   color: var(--color-error);
   padding-left: var(--gap);
+  font-weight: 500;
   margin-left: 0.75rem;
   margin-top: 0.25rem;
 }
