feat: add password confirmation

--- a/src/components/account-stats-bar/account-stats-bar.module.scss
+++ b/src/components/account-stats-bar/account-stats-bar.module.scss
@@ -9,6 +9,7 @@
   border-radius: var(--radius-small);
   padding: 0.5rem;
   width: clamp(10rem, 80vw, 40rem);
+  box-shadow: var(--shadow-pimary);
 
   @include common.mediaquery('desktop') {
     margin: 0;
