--- a/src/components/modals/stats-modal/stats-modal.module.scss
+++ b/src/components/modals/stats-modal/stats-modal.module.scss
@@ -3,11 +3,12 @@
 .container {
   background-color: var(--color-primary);
   padding: 1rem 0;
-  width: clamp(25rem, 35vw, 32rem);
-  border-radius: var(--radius-medium) var(--radius-medium) 0 0;
+  width: clamp(20rem, 80vw, 30rem);
+  border-radius: var(--radius-medium);
   position: relative;
 
   @include common.mediaquery('desktop') {
+    width: clamp(20rem, 40vw, 35rem);
     border-radius: var(--radius-medium);
   }
 }
