--- a/src/components/pages/account/account.module.scss
+++ b/src/components/pages/account/account.module.scss
@@ -16,7 +16,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1.5rem;
 
   @include common.mediaquery('tablet') {
     gap: 2.5rem;
@@ -54,7 +54,7 @@
 .username {
   text-align: center;
   align-self: center;
-  max-width: 75%;
+  max-width: 12rem;
   overflow: hidden;
   margin: 0 auto;
   text-overflow: ellipsis;
@@ -83,11 +83,15 @@
 }
 
 .bio {
-  color: var(--text-secondary);
+  color: var(--color-text-gray);
   text-align: center;
+  max-width: 20rem;
+  word-wrap: break-word;
+  text-wrap: balance;
 
   @include common.mediaquery('desktop') {
     text-align: left;
     font-size: 1.25rem;
+    max-width: 30rem;
   }
 }
