--- a/src/components/account-post/account-post.module.scss
+++ b/src/components/account-post/account-post.module.scss
@@ -13,6 +13,16 @@
   }
 }
 
+.loader {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--color-overlay);
+}
+
 .image {
   width: 100%;
   height: 100%;
