--- a/src/components/forms/search-user-form/search-user-form.module.scss
+++ b/src/components/forms/search-user-form/search-user-form.module.scss
@@ -14,18 +14,10 @@
   }
 }
 
-.input {
-  padding: 0.75rem 0.75rem;
-  border-radius: var(--radius-small);
-  background-color: transparent;
-  flex-grow: 1;
+.inputContainer {
+  max-width: 60%;
 
-  &:focus {
-    outline: none;
-    border-color: var(--color-primary);
-  }
-
-  &::placeholder {
-    color: var(--text-black);
+  @include common.mediaquery('tablet') {
+    max-width: unset;
   }
 }
