--- a/src/components/account-posts-list/account-posts-list.module.scss
+++ b/src/components/account-posts-list/account-posts-list.module.scss
@@ -5,17 +5,16 @@
   place-content: center;
   margin-top: 3rem;
   gap: 1.5rem;
-  padding: 0 1.5rem;
   grid-template-columns: repeat(2, 1fr);
-  padding-bottom: 4rem;
+  width: clamp(20rem, 80vw, 60rem);
 
   @include common.mobile-landscape {
-    padding: 0 4rem;
     gap: 2rem;
-    margin-top: 3rem;
+    margin-top: 2rem;
   }
 
   @include common.mediaquery('tablet') {
+    width: auto;
     gap: 2.5rem;
     grid-template-columns: repeat(3, 1fr);
   }
