--- a/src/components/buttons/aspect-ratio-buttons/aspect-ratio-buttons.module.scss
+++ b/src/components/buttons/aspect-ratio-buttons/aspect-ratio-buttons.module.scss
@@ -5,27 +5,10 @@
 }
 
 .aspectRatioButtons {
-  display: grid;
-  column-gap: 2rem;
-  row-gap: 1rem;
-  justify-content: center;
-  align-items: center;
-  grid-template-columns: repeat(2, 1fr);
+  display: flex;
+  gap: 1rem;
 
-  @include common.mediaquery('desktop') {
-    grid-template-columns: repeat(3, 1fr);
-    gap: 3rem;
-  }
-
-  > button {
-    width: 100%;
-
-    &:last-child {
-      grid-column: 1 / 3;
-
-      @include common.mediaquery('desktop') {
-        grid-column: auto;
-      }
-    }
+  >button {
+    flex-grow: 1;
   }
 }
