--- a/src/components/buttons/button/button.module.scss
+++ b/src/components/buttons/button/button.module.scss
@@ -26,7 +26,7 @@
 
 .secondary {
   @include common.button;
-  border-color: var(--color-text-gray);
+  border-color: var(--color-text);
   color: var(--color-text);
   background-color: transparent;
 }
