--- a/src/components/crop-image/crop-image.module.scss
+++ b/src/components/crop-image/crop-image.module.scss
@@ -30,18 +30,31 @@
 }
 
 .saveOrAnotherImage {
-  margin-top: 1rem;
+  margin-top: 2rem;
 }
 
 .buttons {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   gap: 1rem;
 
+  >button {
+    flex-grow: 1;
+  }
+
   @include common.mediaquery('desktop') {
-    gap: 5rem;
     margin-top: 2rem;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+.hiddenOnMobile {
+  display: none;
+
+  @include common.mediaquery('tablet') {
+    display: initial;
   }
 }
