--- a/src/components/new-post-notification/new-post-notification.module.scss
+++ b/src/components/new-post-notification/new-post-notification.module.scss
@@ -7,12 +7,11 @@
   margin: 0 auto;
   width: max-content;
   z-index: 3;
-  top: 1.5rem;
-  border-radius: var(--radius-small);
+  top: 1rem;
   border: none;
-  box-shadow: var(--shadow-secondary);
-  background-color: var(--color-primary);
-  color: var(--color-secondary);
+  border-radius: var(--radius-small);
+  background-color: var(--color-accent);
+  color: var(--color-button-text);
   padding: 0.5rem 0.7rem;
   font-size: 1.25rem;
   display: flex;
