--- a/src/components/buttons/button/button.module.scss
+++ b/src/components/buttons/button/button.module.scss
@@ -6,7 +6,7 @@
 
   &:disabled {
     background-color: var(--color-gray);
-    border-color: var(--color-gray);
+    box-shadow: 0 0 0 1px var(--color-gray);
     color: var(--color-text-gray);
     cursor: not-allowed;
   }
@@ -26,7 +26,7 @@
 
 .secondary {
   @include common.button;
-  border-color: var(--color-text);
+  box-shadow: 0 0 0 1px var(--color-gray);
   color: var(--color-text);
   background-color: transparent;
 }
@@ -34,6 +34,6 @@
 .destructive {
   @include common.button;
   color: var(--color-text);
-  border-color: var(--color-error-light);
+  box-shadow: 0 0 0 1px var(--color-error-light);
   background-color: var(--color-error-light);
 }
