--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -25,6 +25,7 @@ body {
   color: var(--text-black);
   background-color: var(--color-primary);
   transition: background-color var(--transition);
+  line-height: 1.5em;
 }
 
 img,
