--- a/src/components/pages/chat-room/chat-room.module.scss
+++ b/src/components/pages/chat-room/chat-room.module.scss
@@ -4,8 +4,6 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  max-height: 90dvh;
-  min-height: 70dvh;
   width: 100%;
 
   @include common.mediaquery('desktop') {
@@ -18,16 +16,18 @@
   align-items: center;
   justify-content: center;
   gap: 1.5rem;
-  margin-bottom: 2rem;
   background-color: var(--color-primary);
   width: var(--width);
   top: 0;
   z-index: 1;
+  height: 3rem;
+  margin-bottom: 1rem;
 
   @include common.mediaquery('desktop') {
     margin-bottom: 0;
     padding: 1rem 3rem;
     gap: 3rem;
+    height: auto;
   }
 }
 
@@ -68,8 +68,9 @@
   border-radius: var(--radius-small);
   width: 100%;
   gap: 1rem;
-  padding: 0 2rem;
+  padding: 0 1rem;
   margin-top: 1rem;
+  max-height: 15rem;
 
   @include common.mediaquery('desktop') {
     margin-top: 2rem;
