--- a/src/components/comment/comment.module.scss
+++ b/src/components/comment/comment.module.scss
@@ -42,7 +42,7 @@
   font-weight: 700;
   font-size: 1rem;
   flex-shrink: 0;
-  max-width: 10rem;
+  max-width: 21ch;
   overflow: hidden;
   text-overflow: ellipsis;
 }
