--- a/src/components/forms/comment-form/comment-form.module.scss
+++ b/src/components/forms/comment-form/comment-form.module.scss
@@ -6,4 +6,8 @@
   justify-content: space-between;
   gap: 1rem;
   margin-top: 1rem;
+
+  @include common.mediaquery('desktop') {
+    margin-right: 1rem;
+  }
 }
