--- a/src/components/post/post-modal/post-modal.module.scss
+++ b/src/components/post/post-modal/post-modal.module.scss
@@ -40,7 +40,7 @@
   max-height: 65dvh;
 
   @include common.mediaquery('desktop') {
-    gap: 3rem;
+    gap: 2rem;
   }
 }
 
@@ -57,5 +57,10 @@
 
   @include common.mobile-landscape {
     margin-top: 0;
+  }
+
+  @include common.mediaquery('desktop') {
+    margin-top: 0;
+
   }
 }
