--- a/src/components/post/post-placeholder/post-placeholder.module.scss
+++ b/src/components/post/post-placeholder/post-placeholder.module.scss
@@ -1,9 +1,24 @@
 @use '/src/styles/common';
 
+
+@keyframes animate-bg {
+  0% {
+    background-color: var(--color-secondary);
+  }
+
+  50% {
+    background-color: var(--color-gray);
+  }
+
+  90% {
+    background-color: var(--color-secondary);
+  }
+}
+
 %gradient {
   background-size: var(--placeholder-bg-size);
-  background-image: var(--gradient);
-  animation: var(--placeholder-animation);
+  background-color: var(--color-secondary);
+  animation: animate-bg 2s ease infinite;
 }
 
 .placeholder {
@@ -13,6 +28,8 @@
   display: flex;
   flex-direction: column;
   height: 22rem;
+  @extend %gradient;
+  box-shadow: var(--shadow-pimary);
 
   @include common.mediaquery('tablet') {
     height: 30rem;
@@ -20,19 +37,6 @@
 
   @include common.mediaquery('desktop') {
     border-radius: var(--radius-big);
-    height: 35rem;
+    height: 45rem;
   }
-}
-
-.image {
-  height: 60%;
-  border-radius: var(--radius-small);
-  @extend %gradient;
-  margin-bottom: var(--post-margin);
-}
-
-.footer {
-  height: calc(30% - 5rem);
-  border-radius: var(--radius-small);
-  @extend %gradient;
 }
