--- a/src/components/pages/chat-room/chat-room.module.scss
+++ b/src/components/pages/chat-room/chat-room.module.scss
@@ -69,6 +69,7 @@
   gap: 1rem;
   padding: 0 1rem;
   max-height: 15rem;
+  margin-top: 1rem;
 
   @include common.mediaquery('desktop') {
     gap: 2rem;
