--- a/src/components/account-posts-list/account-posts-list.module.scss
+++ b/src/components/account-posts-list/account-posts-list.module.scss
@@ -1,23 +1,25 @@
 @use '/src/styles/common';
 
 .posts {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   align-items: flex-start;
-  margin-top: 3rem;
+  margin-top: 3.5rem;
   gap: 1rem;
-  width: clamp(20rem, 80vw, 40rem);
+  width: 100%;
+  padding-bottom: 2rem;
 
   @include common.mobile-landscape {
-    margin-top: 2rem;
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  @include common.mediaquery('tablet') {
+    grid-template-columns: repeat(3, 1fr);
   }
 
   @include common.mediaquery('desktop') {
-    width: 100%;
-    margin-top: 4rem;
     padding: 0;
-    padding-bottom: 6rem;
+    padding-bottom: 2rem;
   }
 }
 
