--- a/src/components/account-stats-bar/account-stats-bar.module.scss
+++ b/src/components/account-stats-bar/account-stats-bar.module.scss
@@ -16,10 +16,9 @@
     width: auto;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
-    gap: 2.5rem;
+    justify-content: space-evenly;
     padding: 0.75rem 1.5rem;
-    width: clamp(20rem, 30vw, 34rem);
+    width: clamp(25rem, 35vw, 34rem);
   }
 }
 
