--- a/src/components/pages/edit-account/edit-account.module.scss
+++ b/src/components/pages/edit-account/edit-account.module.scss
@@ -1,15 +1,58 @@
 @use '/src/styles/common';
 
 .container {
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  margin: 2rem auto;
-  margin-bottom: 5rem;
+  margin: 0 auto;
   width: clamp(20rem, 80vw, 50rem);
+}
+
+.avatar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  margin-bottom: 1rem;
+}
+
+.avatarButton {
+  position: relative;
 
   @include common.mediaquery('desktop') {
-    margin: 0 auto;
-    margin-top: 6rem;
+
+    &:hover,
+    &:focus {
+      >.icon {
+        opacity: 1;
+      }
+    }
   }
+}
+
+.icon {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+
+  padding: 0.5rem;
+  border-radius: var(--radius-medium);
+  background-color: rgb(0 0 0 / 0.6);
+
+  @include common.mediaquery('desktop') {
+    opacity: 0;
+    transition: opacity var(--transition-fast);
+  }
+}
+
+
+.modal {
+  background-color: var(--color-primary);
+  padding: 2rem;
+  border-radius: var(--radius-big);
+  width: clamp(20rem, 50vw, 40rem);
+}
+
+.modalHeader {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
 }
