--- a/src/components/navbar/navbar-buttons/navbar-buttons.module.scss
+++ b/src/components/navbar/navbar-buttons/navbar-buttons.module.scss
@@ -7,12 +7,15 @@
   align-items: center;
   gap: 1rem;
 
-  @include common.mediaquery('desktop') {
-    border-radius: 0;
-    border: initial;
+  @include common.mediaquery('tablet') {
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
+  }
+
+  @include common.mediaquery('desktop') {
+    border-radius: 0;
+    border: initial;
     width: 100%;
     height: 100%;
     padding: 0;
@@ -70,7 +73,6 @@
 }
 
 .title {
-
   position: absolute;
   width: 1px;
   height: 1px;
