--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -16,13 +16,19 @@
   border-radius: var(--radius-medium);
   box-shadow: 0 1px 3px 0 rgb(0, 0, 0, 0.3);
   background-color: var(--color-secondary);
-}
 
-.navDesktop {
-  background-color: transparent;
-  width: 100%;
-  display: flex;
-  align-items: flex-start;
-  flex-direction: column;
-  gap: 3rem;
+
+  @include common.mediaquery('tablet') {
+    background-color: transparent;
+    box-shadow: none;
+    border-radius: 0;
+    width: 100%;
+    padding: 0;
+    position: static;
+    flex-direction: column;
+    margin: 0;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+
 }
