--- a/src/components/avatar/avatar.module.scss
+++ b/src/components/avatar/avatar.module.scss
@@ -11,6 +11,7 @@
   overflow: hidden;
   flex-shrink: 0;
   background-color: var(--color-secondary);
+  filter: drop-shadow(0px 0px 1px var(--shadow-2));
 
 
   img {
