--- a/src/components/chat-users-list/chat-users-list.module.scss
+++ b/src/components/chat-users-list/chat-users-list.module.scss
@@ -5,45 +5,34 @@
   margin-top: 4rem;
 }
 
-.nav {
-  width: 100%;
-
-  @include common.mediaquery('desktop') {
-    width: auto;
-  }
-}
-
 .list {
   list-style-type: none;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.5rem;
   overflow-y: auto;
   max-height: 55dvh;
-  width: clamp(20rem, 70%, 40rem);
+  width: 100%;
   margin: 0 auto;
 
-  @include common.mediaquery('desktop') {
-    gap: 2rem;
-    width: 100%;
+  @include common.mediaquery('tablet') {
+    gap: 1rem;
     margin: 0;
-    max-height: 37rem;
-    padding: 0 1rem;
+    margin-top: 4rem;
+    max-height: 40rem;
   }
 }
 
 .listItem {
   width: 100%;
   display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .link {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
   gap: 1rem;
   border-radius: var(--radius-medium);
   background-color: var(--color-primary);
@@ -51,10 +40,9 @@
   width: 100%;
   transition: background-color var(--transition);
 
+
   @include common.mediaquery('desktop') {
     padding: 1rem;
-    gap: 1rem;
-    width: 80%;
 
     &:hover,
     &:focus {
@@ -69,30 +57,39 @@
   }
 }
 
-.name {
+.rightCol {
   display: flex;
   flex-direction: column;
-
-  @include common.mediaquery('desktop') {
-    font-size: 1.5rem;
-  }
-}
-
-.fullName {
-  font-weight: 700;
+  gap: 0.2rem;
 }
 
 .username {
   max-width: 18rem;
   overflow: hidden;
+  font-weight: 500;
   text-overflow: ellipsis;
-  font-size: 0.8em;
+  font-size: 1rem;
+  padding-top: 0.25rem;
   color: var(--text-gray);
 
   @include common.mediaquery('desktop') {
     max-width: unset;
   }
 }
+
+.message {
+  font-size: 0.9rem;
+  color: var(--color-text-gray);
+}
+
+.separator {
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid var(--shadow-1);
+  width: 95%;
+  margin: auto;
+}
+
 
 .loading {
   justify-content: center;
