--- a/src/components/forms/comment-form/comment-form.module.scss
+++ b/src/components/forms/comment-form/comment-form.module.scss
@@ -6,8 +6,10 @@
   justify-content: space-between;
   gap: 1rem;
   margin-top: 1rem;
+  padding: 0 0.25rem;
 
   @include common.mediaquery('desktop') {
     margin-right: 1rem;
+    padding: 0;
   }
 }
