--- a/src/components/pages/chat/chat.module.scss
+++ b/src/components/pages/chat/chat.module.scss
@@ -11,13 +11,9 @@
   width: 100%;
   padding-bottom: 6rem;
 
-  @include common.mediaquery('desktop') {
+  @include common.mediaquery('tablet') {
     gap: 3rem;
     margin: 0 auto;
-    width: clamp(23rem, 60vw, 60rem);
+    width: clamp(23rem, 40vw, 40rem);
   }
-}
-
-.heading {
-  text-align: center;
 }
